// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`getPriceLabelMarkup\` if \`periodText\` is falsy; should render the right structure 1`] = `
<Heading
  className={null}
  hasMargin={true}
  isColorInverted={false}
  size="medium"
  textAlign={null}
>
  $289
</Heading>
`;

exports[`\`getPriceLabelMarkup\` should render the right structure 1`] = `
<React.Fragment>
  <FlexContainer
    alignContent={null}
    alignItems="center"
    flexDirection="row"
    flexWrap={null}
    justifyContent={null}
  >
    <Paragraph
      size="medium"
      weight={null}
    >
      from
    </Paragraph>
    <Heading
      className={null}
      hasMargin={true}
      isColorInverted={false}
      size="medium"
      textAlign={null}
    >
      $289
    </Heading>
  </FlexContainer>
  <Label>
     
    flopy disks
  </Label>
</React.Fragment>
`;
